# Handwriting-Recognition-Flask-App

./: Dockerfile  LICENSE  README.md  app.py  docker-entrypoint.sh  pyproject.toml
static/: handwriting_processor.js
templates/: hand_writing_template.html
